# MTSD_LAB2

./: CMakeLists.txt  README.md
.github/workflows/: build_tests.yml
MTSD_LAB2/: MTSD_LAB2.sln
MTSD_LAB2/MTSD_LAB2/: MDtoHTML.cpp  MDtoHTML.h  MTSD_LAB2.cpp  MTSD_LAB2.vcxproj  MTSD_LAB2.vcxproj.filters
MTSD_LAB2/MTSD_LAB2/x64/Debug/: MTSD_LAB2.exe.recipe  MTSD_LAB2.ilk  vc143.idb
MTSD_LAB2/MTSD_LAB2/x64/Debug/MTSD_LAB2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MTSD_LAB2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
source/: MTSDLAB22.cpp  char_list.cpp  char_list.h  interface.cpp  interface.h
test/: test.cpp
